src/test/ui/consts/const-eval/promoted_raw_ptr_ops.nll.stderr
error[E0714]: temporary value dropped while borrowed
  --> $DIR/promoted_raw_ptr_ops.rs:14:29
   |
LL |     let x: &'static bool = &(42 as *const i32 == 43 as *const i32);
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ creates a temporary which is freed while still in use
...
LL | }
   | - temporary value is freed at the end of this statement
   |
   = note: borrowed value must be valid for the static lifetime...

error[E0714]: temporary value dropped while borrowed
  --> $DIR/promoted_raw_ptr_ops.rs:16:30
   |
LL |     let y: &'static usize = &(&1 as *const i32 as usize + 1); //~ ERROR does not live long enough
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ creates a temporary which is freed while still in use
LL |     let z: &'static i32 = &(unsafe { *(42 as *const i32) }); //~ ERROR does not live long enough
LL | }
   | - temporary value is freed at the end of this statement
   |
   = note: borrowed value must be valid for the static lifetime...

error[E0714]: temporary value dropped while borrowed
  --> $DIR/promoted_raw_ptr_ops.rs:17:28
   |
LL |     let z: &'static i32 = &(unsafe { *(42 as *const i32) }); //~ ERROR does not live long enough
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ creates a temporary which is freed while still in use
LL | }
   | - temporary value is freed at the end of this statement
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0714`.
